add tutdown local assets to facilitate styling

--- a/src/docs/css/_giraffe/variables.less
+++ b/src/docs/css/_giraffe/variables.less
@@ -8,6 +8,12 @@
 @borderRadius: 4px;
 @fontSize: 14px;
 @fontFamily: Verdana, Geneva, sans-serif;
-@monospaceFontFamily: monospace;
+@monospaceFontFamily: Consolas, Menlo, 'Ubuntu Mono', monospace;
 @navWidth: 260px;
 @padding: 20px;
+
+@codeBorderColor: #ECECF0;
+@codeBackgroundColor: #FAFAFC;
+@linkColor: #333;
+@linkActiveColor: #111;
+@linkHoverColor: #111;
