--- a/src/docs/_layout.mustache
+++ b/src/docs/_layout.mustache
@@ -5,14 +5,14 @@
     <title>Giraffe - Barc's Backbone Framework</title>
 
     <!-- Stylesheets -->
-    <link rel='stylesheet' type='text/css' href='_assets/tutdown.css' />
+    <link rel='stylesheet' type='text/css' href='css/style.css' />
 
     <!-- Scripts -->
     <!--[if lt IE 9]><script type="text/javascript" src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 </head>
 <body>
+  <div id="page-wrapper">
     <div class="row">
-
       <!-- Sidebar -->
       <section id="sidebar" class="col sidebar">
         {{{navHeader}}}
@@ -25,8 +25,10 @@
         {{{asset.text}}}
       </article>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="_assets/tutdown.js"></script>
+  </div>
+
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+  <script src="_assets/tutdown.js"></script>
 </body>
 </html>
 
