--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -1,68 +1,78 @@
-@import './reset';
-@import './variables';
-@import './utilities';
-@import './mixins';
-@import './prettify';
-
-body {
-  background-color: @backgroundColor;
-  font-size: @fontSize;
-  font-family: @fontFamily;
-  line-height: 1.5;
-  background-image: url('../img/texture.png');
-  color: @textColor;
-}
+@import './_tutdown/normalize';
+@import './_tutdown/index';
+@import './_giraffe/index';
 
 * {
   .box-sizing(border-box);
 }
 
-h1 {
-  font-size: 42px;
+
+//////////
+// GRID //
+//////////
+
+
+@media only screen and (min-width: 34em) {
+        .feature, .info { width: 50%; }
 }
 
-h2 {
+@media only screen and (min-width: 54em) {
+        .content { width: 80.00%; }
+        .sidebar { width: 20.00%; }
+        .info    { width: 100%;   }
+}
+
+@media only screen and (min-width: 76em) {
+        .content { width: 75.00%; } /* 7/12 */
+        .sidebar { width: 25.00%; } /* 5/12 */
+}
+
+#page-wrapper {
+  width: 1280px ;
+  margin-left: auto ;
+  margin-right: auto ;
+}
+
+/////////// GENERAL
+
+p, a, td {
+  color: #444;
+}
+
+h1, h2, h3, h4, h5 {
+  color: #222;
+}
+
+.logo {
+  font-family: "Helvetica Neue", "Helvetica", verdana, sans;
+  color: #444;
   font-size: 32px;
-  padding: @padding 0 @padding / 2;
+  background-color: black;
+  margin-left: 1em;
+  border: double 3px #444;
+  padding: 0.2em;
 }
 
-h3 {
-  font-size: 22px;
-  padding: @padding 0 @padding / 2;
-}
 
-p {
-  margin-bottom: @padding / 2;
-}
-
-section {
-  margin-top: @padding * 2;
+//
+iframe.result {
+  width: 100%;
+  min-height: 200px;
+  height: auto;
+  border: dashed 1px @codeBorderColor;
 }
 
 code {
-  font-size: @fontSize;
   font-family: @monospaceFontFamily;
-  padding: 0 4px;
-  background-color: rgba(0, 0, 0, 0.035);
-  .border-radius(3px);
-  border: 1px dashed rgba(0, 0, 0, 0.1);
 }
 
-pre {
-  padding: 20px;
-  .border-radius;
-  font-family: @monospaceFontFamily;
-  line-height: 1;
 
-  &.prettyprint {
-    border: 0;
-  }
 
-  code {
-    display: block;
-    padding: 4px;
-  }
+ul {
+  list-style: none;
+  padding-left: 1em;
 }
+
 
 strong {
   font-weight: bold;
@@ -70,13 +80,20 @@ strong {
 
 a {
   color: @linkColor;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .caption {
   margin-left: 14px;
-  font-size: 12px;
+  /* font-size: 12px; */
   color: @lightTextColor;
   font-family: @monospaceFontFamily;
+  font-weight: normal;
+  font-size: 14px;
 }
 
 #logo {
@@ -85,115 +102,8 @@ a {
   margin-left: -@padding;
 }
 
-#content {
-  position: relative;
-  margin-left: @navWidth;
-  padding: @padding @padding * 2 @padding * 2 @padding * 2;
-  max-width: 840px;
-}
-
-#nav {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: @navWidth;
-  overflow: auto;
-  z-index: 1;
-  .box-shadow(0 0 30px #d7d7d7);
-  background-color: #fff;
-  padding: 6px @padding @padding @padding * 2;
-
-  a {
-    text-decoration: none;
-
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-
-  ul {
-    padding-left: @padding;
-    font-size: 12px;
-  }
-}
-
-#nav-background {
-  z-index: -1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 0.6;
-  background-image: url('../img/texture.png');
-}
-
 .nav-title {
-  margin-top: 30px;
+  /* margin-top: 30px; */
   font-size: 15px;
 }
 
-.menu {
-  padding-left: 80px;
-
-  li {
-    color: #888;
-    display: inline-block;
-    min-width: 80px;
-    cursor: pointer;
-    border: 1px solid transparent;
-    text-align: center;
-    .border-top-left-radius;
-    .border-top-right-radius;
-    padding: 4px;
-    position: relative;
-    top: 1px;
-
-    &:hover {
-    }
-
-    &:active {
-      color: #555;
-    }
-
-    &.active {
-      color: #333;
-      border-color: @borderColor;
-      border-bottom-color: @backgroundColor;
-    }
-  }
-}
-
-.menu-content {
-  border: @border;
-  padding: 20px;
-  .border-radius;
-}
-
-#save-scroll-position-view {
-  .content-view {
-    height: 200px;
-    overflow: auto;
-  }
-}
-
-.child-view {
-  padding: 20px;
-  margin: 20px;
-  border: 1px dashed #888;
-}
-
-#uncached-dots-view, #cached-dots-view {
-  word-break: break-all;
-  line-height: 8px;
-}
-
-#barc_container {
-  margin-top: @padding;
-  height: 600px;
-}
-
-#download-section {
-  margin-top: 60px;
-}
