ready for ryan styling

--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -17,20 +17,24 @@
 }
 
 @media only screen and (min-width: 54em) {
-        .content { width: 80.00%; }
-        .sidebar { width: 20.00%; }
-        .info    { width: 100%;   }
+        .content { width: 70.00%; }
+        .sidebar { width: 30.00%; }
 }
 
 @media only screen and (min-width: 76em) {
-        .content { width: 75.00%; } /* 7/12 */
-        .sidebar { width: 25.00%; } /* 5/12 */
+        .content { width: 80.00%; } /* 7/12 */
+        .sidebar { width: 20.00%; } /* 5/12 */
 }
 
 #page-wrapper {
   width: 1280px ;
   margin-left: auto ;
   margin-right: auto ;
+}
+
+#sidebar {
+  margin-top: 50px;
+  border: double 3px @codeBorderColor;
 }
 
 /////////// GENERAL
@@ -43,15 +47,15 @@ h1, h2, h3, h4, h5 {
   color: #222;
 }
 
-.logo {
-  font-family: "Helvetica Neue", "Helvetica", verdana, sans;
-  color: #444;
-  font-size: 32px;
-  background-color: black;
-  margin-left: 1em;
-  border: double 3px #444;
-  padding: 0.2em;
-}
+/* .logo { */
+/*   font-family: "Helvetica Neue", "Helvetica", verdana, sans; */
+/*   color: #444; */
+/*   font-size: 32px; */
+/*   background-color: black; */
+/*   margin-left: 1em; */
+/*   border: double 3px #444; */
+/*   padding: 0.2em; */
+/* } */
 
 
 //
