--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -100,6 +100,13 @@ a {
   font-size: 14px;
 }
 
+.static {
+  font-style: italic;
+}
+.static:before {
+  content: '.';
+}
+
 #logo {
   width: 600px;
   height: 135px;
