--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -33,8 +33,10 @@
 }
 
 #sidebar {
-  margin-top: 50px;
-  border: double 3px @codeBorderColor;
+  margin-top: 160px;
+  border-right: solid 1px #cfdae5;
+  border-bottom: solid 1px #cfdae5;
+  background-color: #dae6f2;
 }
 
 /////////// GENERAL
