add learn more section

--- a/src/docs/css/_tutdown/highlight.less
+++ b/src/docs/css/_tutdown/highlight.less
@@ -7,7 +7,7 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 code {
   font-family: consolas, menlo, "ubuntu mono", monospaced;
   font-size: 0.9em;
-  color: #111;
+  color: #222;
 }
 
 pre code {
@@ -89,7 +89,7 @@ pre .asciidoc .bullet,
 pre .markdown .bullet,
 pre .asciidoc .link_url,
 pre .markdown .link_url {
-  color: #cc1b00;
+  color: #b40038;
 }
 
 pre .label,
@@ -143,6 +143,7 @@ pre .markdown .strong,
 pre .request,
 pre .status {
   font-weight: bold;
+  color: #111;
 }
 
 pre .asciidoc .emphasis,
