add template strategies doc

--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -26,7 +26,7 @@
         #sidebar { width: 20.00%; }
 }
 
-html, body, #page-wrapper, .row, .section-example {
+html, body, #page-wrapper, .row {
   height: 100%;
 }
 #page-wrapper {
@@ -96,7 +96,7 @@ strong {
 
 a {
   color: @linkColor;
-  text-decoration: none;
+   text-decoration: none;
 
   &:hover {
     text-decoration: underline;
@@ -167,6 +167,7 @@ a {
   font-size: 0.8em;
   padding: 0.5em;
   .border-radius(4px);
+  cursor: pointer;
 }
 
 .collapsed:before {
