--- a/src/docs/css/_tutdown/highlight.less
+++ b/src/docs/css/_tutdown/highlight.less
@@ -17,7 +17,7 @@ pre code {
   border: solid 1px @codeBorderColor;
 }
 
-.language-uml {
+.uml {
   border: none;
   background-color: inherit;
   padding: 0;
