use normalize in examples so it does not need to be included

--- a/src/docs/_example.mustache
+++ b/src/docs/_example.mustache
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='../css/normalize.css' />
-    <link rel='stylesheet' type='text/css' href='dataEvents0-style.css' />
+    <link rel='stylesheet' type='text/css' href='{{id}}-style.css' />
   </head>
   <body>
-    
-    <script src='dataEvents0-script.js'></script>
+    {{{markup}}}
+    <script src='{{id}}-script.js'></script>
   </body>
 </html>
