add barc link and license html

--- a/src/docs/_layout.mustache
+++ b/src/docs/_layout.mustache
@@ -13,10 +13,12 @@
 <body>
   <div id="page-wrapper">
     <div class="row">
+
       <!-- Sidebar -->
       <section id="sidebar" class="col sidebar">
         {{{navHeader}}}
         {{{asset.nav}}}
+        <h3><a href='http://barc.com' class='barc'>@Barc</a></h3>
       </section>
 
       <!-- Main Body -->
