--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -138,3 +138,12 @@ a {
 }
 
 
+.note {
+  background-color: #ffffed;
+  color: #54544a;
+  margin: 1.5em;
+  padding: 0.5em;
+  border: solid 1px #ebebda;
+}
+
+
