--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -39,12 +39,15 @@ html, body, #page-wrapper, .row {
 
 #sidebar {
   height: 100%;
-  padding-top: 148px;
+  padding-top: 140px;
+  h2, h3, a {
+    color: #888;
+  }
 }
 
 #content {
   height: 100%;
-  border-left: solid 1px #eee;
+  border-left: solid 1px #ddd;
 }
 
 /////////// GENERAL
@@ -143,7 +146,8 @@ a {
   color: #54544a;
   margin: 1.5em;
   padding: 0.5em;
-  border: solid 1px #ebebda;
+  border-right: solid 1px #ebebda;
+  border-bottom: solid 1px #ebebda;
 }
 
 
