update some examples ot use EXAMPLE style

--- a/src/docs/css/_tutdown/tabs.less
+++ b/src/docs/css/_tutdown/tabs.less
@@ -2,9 +2,16 @@
 
 
 /////////// TABS
-.tabs, .tabs_content {
+.tabs {
 	border-bottom: 1px solid #cccccc;
 }
+
+.tabs_content {
+	border-left: 1px solid #cccccc;
+	border-right: 1px solid #cccccc;
+	border-bottom: 1px solid #cccccc;
+}
+
 .tabs ul {
 	list-style: none;
 	padding: 0 0 10px 0;
@@ -49,7 +56,7 @@
 .tabs_content {
 	//border: 1px solid #ccc;
 	border-top: none;
-	padding: 10px 0;
+	padding: 10px;
 	//width: 600px;
 }
 
