fix vertical line

--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -37,7 +37,6 @@ html, body, #page-wrapper, .row {
 }
 
 #sidebar {
-  height: 100%;
   padding-top: 140px;
   li a {
     font-size: 14px;
@@ -60,8 +59,7 @@ html, body, #page-wrapper, .row {
 }
 
 #content {
-  height: 100%;
-  border-left: solid 1px #ddd;
+  border-left: solid 1px #eee;
 }
 
 /////////// GENERAL
