--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -60,6 +60,13 @@ html, body, #page-wrapper, .row {
 
 #content {
   border-left: solid 1px #eee;
+  min-height: 100%;
+  padding-bottom: 20px;
+
+  h2 {
+    margin-top: 30px;
+    padding-top: 20px;
+  }
 }
 
 /////////// GENERAL
@@ -117,6 +124,8 @@ a {
   width: 600px;
   height: 135px;
   margin-left: -@padding;
+  position: relative;
+  top: 20px;
 }
 
 .nav-title {
