doc updates and styling

--- a/src/docs/css/_giraffe/variables.less
+++ b/src/docs/css/_giraffe/variables.less
@@ -8,7 +8,7 @@
 @borderRadius: 4px;
 @fontSize: 14px;
 @fontFamily: Verdana, Geneva, sans-serif;
-@monospaceFontFamily: Consolas, Menlo, 'Ubuntu Mono', monospace;
+@monospaceFontFamily: consolas, menlo, "ubuntu mono", monospace;
 @navWidth: 260px;
 @padding: 20px;
 
