--- a/src/docs/css/_tutdown/highlight.less
+++ b/src/docs/css/_tutdown/highlight.less
@@ -5,9 +5,12 @@ Original style from softwaremaniacs.org (c) Ivan Sagalaev <Maniac@SoftwareManiac
 
 
 code {
-  font-family: consolas, menlo, "ubuntu mono", monospaced;
+  font-family: consolas, menlo, "ubuntu mono", monospace;
   font-size: 0.9em;
   color: #222;
+  padding: 0 0.2em;
+  background-color: @codeBackgroundColor;
+  border: solid 1px @codeBorderColor;
 }
 
 pre code {
