--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -168,6 +168,11 @@ a {
   margin: 1.5em;
   padding: 0.5em;
   border: solid 1px #ededba;
+
+  code {
+    border: solid 1px #ebebba;
+    background-color: #fff;
+  }
 }
 
 .aside {
