--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -49,6 +49,7 @@ body {
   }
   h2 {
     font-size: 18px;
+    margin-bottom: 2px;
   }
   h3 {
     font-size: 16px;
@@ -61,6 +62,9 @@ body {
     &:hover {
       text-decoration: underline;
     }
+  }
+  ul {
+    margin-top: 2px;
   }
 }
 
