--- a/src/docs/_layout.mustache
+++ b/src/docs/_layout.mustache
@@ -16,6 +16,11 @@
 
       <!-- Sidebar -->
       <section id="sidebar" class="col sidebar">
+        <h2><a href="index.html#">Backbone.Giraffe</a></h2>
+        <ul>
+          <li><a href="index.html#h-download">Download</a></li>
+          <li><a href="https://github.com/barc/backbone.giraffe">Github</a></li>
+        </ul>
         {{{navHeader}}}
         {{{asset.nav}}}
         <h3><a href='http://barc.com' class='barc'>@Barc</a></h3>
