view basics polish

--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -69,7 +69,7 @@ body {
 }
 
 #content {
-  max-width: 910px; // sized for View UML diagram
+  max-width: 800px;
   min-width: 500px;
   min-height: 100%;
   border-left: solid 1px #eee;
