docs: fix linking to missing assets

--- a/src/docs/_example.mustache
+++ b/src/docs/_example.mustache
@@ -2,10 +2,10 @@
 <html>
   <head>
     <link rel='stylesheet' type='text/css' href='../css/reset.css' />
-    <link rel='stylesheet' type='text/css' href='{{id}}-style.css' />
+    {{{stylesheets}}}
   </head>
   <body>
     {{{markup}}}
-    <script src='{{id}}-script.js'></script>
+    {{{scripts}}}
   </body>
 </html>
