--- a/src/docs/_layout.mustache
+++ b/src/docs/_layout.mustache
@@ -50,6 +50,14 @@
     });
   });
   </script>
+  <div id="barc-container"></div>
+  <script type="text/javascript"> 
+    (function() { 
+      var b = document.createElement("script"); b.type = "text/javascript"; b.async = true; 
+      b.src = "https://barc.com/js/libs/barc/barc.js"; 
+      var s = document.getElementsByTagName("script")[0]; s.parentNode.insertBefore(b, s); 
+    })(); 
+  </script>
 </body>
 </html>
 
