--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -8,6 +8,7 @@
 
 body {
   line-height: 1.3;
+  color: @textColor;
 }
 
 
@@ -43,8 +44,11 @@ body {
   width: @sidebarWidth;
   height: 100%;
   overflow: auto;
-
-  li a {
+  
+  .active {
+    font-weight: bold;
+  }
+  li {
     font-size: 14px;
   }
   h2 {
@@ -53,9 +57,6 @@ body {
   }
   h3 {
     font-size: 16px;
-  }
-  h2, h3, a {
-    color: #888;
   }
   a {
     text-decoration: none;
@@ -81,13 +82,8 @@ body {
 }
 
 /////////// GENERAL
-
-p, a, td {
-  color: #444;
-}
-
 h1, h2, h3, h4, h5 {
-  color: #222;
+  color: @headerColor;
 }
 
 iframe.result {
@@ -160,9 +156,6 @@ a {
 }
 .uncollapsed:before {
   content: "hide...";
-}
-.barc {
-  //color: #47a3ea;
 }
 
 
