tab bottom border fix

--- a/src/docs/css/_tutdown/tabs.less
+++ b/src/docs/css/_tutdown/tabs.less
@@ -37,7 +37,7 @@
 	color: @linkHoverColor;
 }
 .tabs ul li.active a {
-	border-bottom: none;
+	border-bottom: 1px solid #fff;
 	color: @linkActiveColor;
 	padding-bottom: 11px;
         font-weight: bold;
