--- a/src/docs/css/_giraffe/variables.less
+++ b/src/docs/css/_giraffe/variables.less
@@ -1,8 +1,8 @@
 @blue: #4999de;
 @darkBlue: #002a41;
-@headerColor: @darkBlue;
 @textColor: desaturate(lighten(@darkBlue, 2%), 35%);
-@lightTextColor: desaturate(lighten(@darkBlue, 30%), 80%);
+@mediumTextColor: desaturate(lighten(@darkBlue, 25%), 75%);
+@lightTextColor: desaturate(lighten(@darkBlue, 45%), 85%);
 @linkColor: @textColor;
 @linkHoverColor: darken(@textColor, 5%);
 @linkActiveColor: darken(@textColor, 10%);
@@ -11,7 +11,7 @@
 @border: 1px solid @borderColor;
 @borderRadius: 4px;
 @fontSize: 14px;
-@fontFamily: Verdana, Geneva, sans-serif;
+@fontFamily: sans-serif;
 @monospaceFontFamily: consolas, menlo, "ubuntu mono", monospace;
 @navWidth: 260px;
 @padding: 20px;
