--- a/src/docs/css/_giraffe/variables.less
+++ b/src/docs/css/_giraffe/variables.less
@@ -1,9 +1,9 @@
 @blue: #4999de;
 @darkBlue: #002a41;
-@textColor: desaturate(lighten(@darkBlue, 2%), 35%);
-@mediumTextColor: desaturate(lighten(@darkBlue, 25%), 75%);
-@lightTextColor: desaturate(lighten(@darkBlue, 45%), 85%);
-@linkColor: @textColor;
+@textColor: #333;
+@mediumTextColor: #666;
+@lightTextColor: #999;
+@linkColor: desaturate(lighten(@darkBlue, 25%), 40%);
 @linkHoverColor: darken(@textColor, 5%);
 @linkActiveColor: darken(@textColor, 10%);
 @backgroundColor: #fff;
