forked README into index.md, other tweaks

--- a/src/docs/css/style.less
+++ b/src/docs/css/style.less
@@ -193,3 +193,20 @@ a {
   border-bottom: solid 1px #ececec;
 }
 
+.download-labels {
+  display: inline;
+}
+
+.download-size-label {
+  text-decoration: italic;
+}
+
+.download-version-label {
+  font-weight: bold;
+}
+
+.button-size-label {
+  position: relative;
+  top: 15px;
+  left: 8px;
+}
