--- a/src/docs/css/_giraffe/mixins.less
+++ b/src/docs/css/_giraffe/mixins.less
@@ -19,7 +19,7 @@
   @boxShadow: 0 1px 3px lighten(@color, 20%) inset, 0 -1px 1px darken(@color, 15%) inset;
   .box-shadow(@boxShadow);
   outline: none !important;
-  width: 265px;
+  width: auto;
 
   &:hover, &:focus {
     @boxShadow: 0 1px 5px lighten(@color, 20%) inset, 0 -1px 4px darken(@color, 15%) inset, 0 1px 2px rgba(0, 0, 0, 0.2);
